tests/ImportTests/data/AmbigiousRefTest.xpl
string hello_world = "Hello World!\n";

import test.hello.hello_world;

node[] main() {
  hello_world;
}
